# axolent

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .semgrepignore  .zizmor.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  funding.json  ruff.toml  start-bot.bat
bridge/: .bandit.yaml  .coveragerc  .env.example  .importlinter  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
bridge/application/: __init__.py  audit_service.py  bookmark_service.py  chat_service.py  consolidator.py  debate_orchestrator.py  fallback_resolver.py  language_resolver.py  leakage_filter.py  memory_conflict_detector.py  memory_service.py  memory_translation_service.py  model_registry.py  model_service.py  ollama_service.py  proactive_trigger_service.py  prompt_composer.py  provider_router.py  rate_limiter.py  self_awareness_service.py  settings_service.py  status_manager.py  streaming_handler.py  style_adaption_service.py  task_router.py  text_guard_service.py
bridge/application/execution/: __init__.py  context.py  envelope.py  instruction_compiler.py  kernel.py  plan.py  resolvers.py
bridge/application/language/: __init__.py  audit.py  backends.py  context.py  contract.py  enforcement.py  model_profiles.py  orchestrator.py  registry.py  repair_service.py  resolver.py  stream_guard.py  verifier.py
bridge/application/security/: __init__.py  injection_detector.py  input_normalizer.py  prompt_delimiters.py  secret_scanner.py
bridge/application/skill_compression/: __init__.py  bkt.py  capability_broker.py  collision_detector.py  contract_builder.py  contract_store.py  contract_validator.py  draft_store.py  elo_rating.py  event_normalizer.py  evidence_ledger.py  fingerprint_matcher.py  fsrs_decay.py  hypothesis_storage.py  learn_flow_service.py  local_eval_set.py  markov_chain.py  ngram_extractor.py  pattern_judge.py  permission_gate.py  skill_contract.py  skill_explainer.py  skill_formatting.py  skill_installer.py  skill_learning_service.py  skill_matcher.py  topic_classifier.py
bridge/config/: models.yaml  system_prompt.example.md  task_slots.yaml  user_constitution.example.md
bridge/domain/: __init__.py  bookmark.py  conversation.py  i18n.py  language.py  markdown.py  onboarding.py  personality.py  prompt_escaping.py  task_slot.py
bridge/domain/memory/: __init__.py  episodic.py  procedural.py  semantic.py
bridge/domain/text_guard/: __init__.py  __main__.py  guard.py  language_detector.py  models.py  rules_registry.py
bridge/i18n/: __init__.py
bridge/i18n/domain/: i18n.py
bridge/i18n/locales/: _meta.json  ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  sv.json  th.json  tr.json  uk.json  vi.json  zh.json
bridge/infrastructure/: __init__.py  audit_log.py  bookmark_storage.py  claude_cli.py  claude_process_pool.py  conversation_storage.py  crypto_storage.py  encoding.py  log_redaction.py  memory_storage.py  onboarding_storage.py  personality_loader.py  safe_json.py  sqlite_storage.py
bridge/infrastructure/providers/: __init__.py  base.py  claude_cli.py  claude_persistent.py  gemini_cli.py  mistral_vibe_cli.py  ollama_local.py  openai_codex_cli.py
bridge/infrastructure/security/: __init__.py  env_scrubber.py
bridge/presentation/: __init__.py  callbacks.py  decorators.py  handlers.py  onboarding_callbacks.py  render.py  settings_callbacks.py  skill_commands.py  skill_profile_view.py
bridge/scripts/: backfill_skill_aliases.py  inject_self_awareness_i18n.py  migrate_hypotheses_to_contracts.py
bridge/tests/: conftest.py  test_bugfixes_2026_05_26_round2.py  test_bugfixes_2026_05_27_round3.py  test_bugfixes_2026_05_27_round4.py  test_bugfixes_2026_05_27_round5.py  test_bundleD_medium_11_16_plus_lows.py  test_bundleE_final_review_fixes.py  test_bundleF_handler_e2e.py  test_main.py
bridge/tests/corpus/: __init__.py  golden_prompts.yaml  golden_runner.py
bridge/tests/test_adversarial/: __init__.py  test_K10_persistence.py  test_K1_input_injection.py  test_K2_unicode_stress.py  test_K3_length_stress.py  test_K4_race_concurrency.py  test_K5_timezone_edge.py  test_K6_privacy_bypass.py  test_K7_lcp_state.py  test_K8_sentry_pii.py  test_K9_skill_edge.py
bridge/tests/test_application/: test_bookmark_service.py  test_chat_service.py  test_chat_service_memory_escape.py  test_debate_orchestrator.py  test_e2e_journeys.py  test_fallback_resolver.py  test_language_mutation_killing.py  test_language_resolver.py  test_leakage_filter.py  test_memory_active_curiosity.py  test_memory_recall_fallback.py  test_memory_service.py  test_memory_translation_service.py  test_model_registry.py  test_model_service.py  test_ollama_service.py  test_phase1_language_fixes.py  test_proactive_trigger_service.py  test_prompt_composer.py  test_property_based.py  test_rate_limiter.py  test_rate_limiter_benchmark.py  test_self_awareness_service.py  test_settings_service.py  test_status_manager.py  test_streaming_handler.py  test_streaming_handler_with_text_guard.py  test_style_adaption_service.py  test_task_router.py  test_text_guard_service.py
bridge/tests/test_architecture/: __init__.py  test_doc_locks.py  test_langdetect_isolation.py  test_lcp_cleanup.py  test_lcp_wiring.py  test_learn_flow_wiring.py  test_main_wiring_generalized.py  test_safety_gate_wiring.py  test_settings_v2_wiring.py  test_skill_compression_architecture.py  test_skill_compression_wiring.py  test_wiring_guard.py
bridge/tests/test_corpus/: __init__.py  conftest.py  test_golden_corpus.py
bridge/tests/test_domain/: test_bookmark.py  test_conversation.py  test_i18n.py  test_i18n_parity.py  test_language.py  test_markdown.py  test_onboarding.py  test_personality.py  test_personality_features.py  test_prompt_escaping.py  test_self_awareness_i18n.py  test_task_slot.py
bridge/tests/test_e2e/: __init__.py  test_streaming_flow.py
bridge/tests/test_e2e_telegram/: __init__.py  conftest.py  test_real_telegram_flow.py  test_user_journeys.py
bridge/tests/test_infrastructure/: test_audit_log.py  (+15 more)
(+272 files in other folders)
