[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axolent-bridge"
version = "0.1.0"
description = "Axolent Bridge: Telegram bot with Claude Code CLI (AXOLENT AI)"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.7",
    "python-dotenv==1.2.2",
    "filelock>=3.13",
    "langdetect>=1.0.9,<2",
    "beartype>=0.18",
    "icontract>=2.7",
    # Floor-pin: transitive dep via fastapi/mcp/sse_starlette.
    # Pinned to patch PYSEC-2026-161 (starlette <1.0.1 vulnerability).
    "starlette>=1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.0",
    "syrupy>=4.0",
    "hypothesis>=6.0",
]
dev = [
    "pre-commit>=4.0",
    "import-linter>=2.0",
    "semgrep>=1.45",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
text-guard-office = [
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]
text-guard-watch = [
    "watchdog>=4.0",
]
encryption = [
    "keyring>=25.0",
    "pysqlcipher3>=1.2.0",
]
skill-compression = [
    "bertopic>=0.16",
]

[project.urls]
Homepage = "https://axolent.ai"
Repository = "https://github.com/axolent-ai/axolent"
Documentation = "https://axolent.ai"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: pure unit tests, no external dependencies",
    "integration: tests that touch storage, subprocesses, or external services",
    "i18n: tests for language detection, translation, and locale handling",
    "streaming: tests for streaming handler, throttle, multi-message rollover",
    "security: tests for whitelisting, rate-limit, privacy guard, audit-log",
    "dialog_flow: multi-turn language consistency tests",
    "skill_compression: tests for the skill-compression engine (pattern recognition)",
]
filterwarnings = [
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:coroutine.*was never awaited:pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["domain*", "infrastructure*", "application*", "presentation*"]
